fix white background on mobile

--- a/src/ClipYT/wwwroot/css/site.css
+++ b/src/ClipYT/wwwroot/css/site.css
@@ -31,6 +31,7 @@ body {
     color: white;
     /*background-color: var(--background-color-bottom);*/
     background-image: linear-gradient(var(--background-color-top), var(--background-color-bottom));
+    background-color: var(--background-color-bottom);
 }
 
 #app-form {
